<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/nav_main_notebook">
        <item
            android:orderInCategory="0"
            android:id="@+id/nav_my_notes"
            android:title="@string/my_notes" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/nav_notebooks">
        <item
            android:orderInCategory="1"
            android:id="@+id/nav_favourites"
            android:title="@string/nav_favourites" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/nav_divider">
        <item
            android:orderInCategory="2"
            android:id="@+id/nav_new_notebook"
            android:title="@string/main_create_new_notebook"
            />
        <item
            android:orderInCategory="2"
            android:id="@+id/nav_change_notebook"
            android:title="@string/main_change_notebook"
            />
        <item
            android:orderInCategory="2"
            android:id="@+id/nav_delete_notebook"
            android:title="@string/nav_delete_notebook"
            />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/nav_settings_group"
        android:title="@string/main_settings">
        <item
            android:orderInCategory="3"
            android:id="@+id/nav_settings"
            android:title="@string/main_settings" />
    </group>

</menu>