<resources>
    <string name="app_name">NoteApp</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="default_notebook">My Notes</string>
    <string name="editor_hint">Enter your Notes</string>
    <string name="note_title_hint">Enter title of your note</string>
    <string name="FAB_content_description">Create new note</string>
    <string name="tv_text">Write a new notebook name</string>
    <string name="note">Note</string>
    <string name="updated_at">NoteRV_Updated At</string>
    <string name="search">search</string>
    <string name="my_notes">My Notes</string>
    <string name="main_create_new_notebook">Create new notebook</string>
    <string name="main_settings">Settings</string>
    <string name="colorpicker">colorPicker</string>
    <string name="save">save</string>
    <string name="nav_change_theme">Change theme</string>
    <string name="main_change_notebook">Change notebook</string>
    <string name="nav_change_font">Change font</string>
    <string name="nav_delete_notebook">Delete notebook</string>
    <string name="nav_favourites">Favourites</string>
</resources>